--- a/document/book.bib
+++ b/document/book.bib
@@ -2552,20 +2552,484 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   year = {2014}
 }
 
+@book{cattellAbilitiesTheirGrowth1971,
+  address = {Boston, MA},
+  title = {Abilities: {{Their}} Growth, Structure, and Action},
+  publisher = {{Houghton Mifflin}},
+  author = {Cattell, R},
+  year = {1971}
+}
 
-@Article{pearceStatisticalLearningProbabilistic2018b,
-  langid = {english},
-  title = {Statistical Learning and Probabilistic Prediction in Music Cognition: Mechanisms of Stylistic Enculturation: {{Enculturation}}: Statistical Learning and Prediction},
-  volume = {1423},
-  issn = {00778923},
-  url = {http://doi.wiley.com/10.1111/nyas.13654},
-  doi = {10.1111/nyas.13654},
-  shorttitle = {Statistical Learning and Probabilistic Prediction in Music Cognition},
+@incollection{jhornTheoryFluidCrystalized1994,
+  address = {New York},
+  series = {R. Sternberg},
+  title = {Theory of Fluid and Crystalized Intelligence},
+  booktitle = {Encyclopedia of Human Intelligence},
+  publisher = {{MacMillan Reference Library}},
+  author = {{J Horn}},
+  year = {1994},
+  pages = {443-451}
+}
+
+@article{schulzeNeuralCorrelatesStrategy2011,
+  title = {Neural Correlates of Strategy Use during Auditory Working Memory in Musicians and Non-Musicians: {{Neural}} Correlates of Strategy Use},
+  volume = {33},
+  issn = {0953816X},
+  shorttitle = {Neural Correlates of Strategy Use during Auditory Working Memory in Musicians and Non-Musicians},
+  doi = {10.1111/j.1460-9568.2010.07470.x},
+  abstract = {Working memory (WM) performance in humans can be improved by structuring and organizing the material to be remembered. For visual and verbal information, this process of structuring has been associated with the involvement of a prefrontal\textendash{}parietal network, but for non-verbal auditory material, the brain areas that facilitate WM for structured information have remained elusive. Using functional magnetic resonance imaging, this study compared neural correlates underlying encoding and rehearsal of auditory WM for structured and unstructured material. Musicians and non-musicians performed a WM task on five-tone sequences that were either tonally structured (with all tones belonging to one tonal key) or tonally unstructured (atonal) sequences. Functional differences were observed for musicians (who are experts in the music domain), but not for non-musicians \textendash{} The right pars orbitalis was activated more strongly in musicians during the encoding of unstructured (atonal) vs. structured (tonal) sequences. In addition, data for musicians showed that a lateral (pre)frontal\textendash{}parietal network (including the right premotor cortex, right inferior precentral sulcus and left intraparietal sulcus) was activated during WM rehearsal of structured, as compared with unstructured, sequences. Our findings indicate that this network plays a role in strategy-based WM for non-verbal auditory information, corroborating previous results showing a similar network for strategy-based WM for visual and verbal information.},
+  language = {en},
   number = {1},
-  journaltitle = {Annals of the New York Academy of Sciences},
+  journal = {European Journal of Neuroscience},
+  author = {Schulze, K. and Mueller, K. and Koelsch, S.},
+  month = jan,
+  year = {2011},
+  pages = {189-196},
+  file = {/Users/davidjohnbaker/Zotero/storage/NU3I8WK9/Schulze et al. - 2011 - Neural correlates of strategy use during auditory .pdf},
+  annote = {People remember five note sequences, proof not all tone sequences are as easy to remember.
+
+Other stuff could added too}
+}
+
+@article{koelschPredictiveProcessesPeculiar2018,
+  title = {Predictive {{Processes}} and the {{Peculiar Case}} of {{Music}}},
+  issn = {13646613},
+  doi = {10.1016/j.tics.2018.10.006},
+  language = {en},
+  journal = {Trends in Cognitive Sciences},
+  author = {Koelsch, Stefan and Vuust, Peter and Friston, Karl},
+  month = nov,
+  year = {2018},
+  file = {/Users/davidjohnbaker/Zotero/storage/U8WM6JAM/Koelsch et al. - 2018 - Predictive Processes and the Peculiar Case of Musi.pdf}
+}
+
+@article{hensonForwardInferenceUsing2006,
+  title = {Forward Inference Using Functional Neuroimaging: Dissociations versus Associations},
+  volume = {10},
+  issn = {13646613},
+  shorttitle = {Forward Inference Using Functional Neuroimaging},
+  doi = {10.1016/j.tics.2005.12.005},
+  language = {en},
+  number = {2},
+  journal = {Trends in Cognitive Sciences},
+  author = {Henson, R},
+  month = feb,
+  year = {2006},
+  pages = {64-69},
+  file = {/Users/davidjohnbaker/Zotero/storage/VKNHL3YU/Henson - 2006 - Forward inference using functional neuroimaging d.pdf}
+}
+
+@article{poldrackCanCognitiveProcesses2006,
+  title = {Can Cognitive Processes Be Inferred from Neuroimaging Data?},
+  volume = {10},
+  issn = {13646613},
+  doi = {10.1016/j.tics.2005.12.004},
+  language = {en},
+  number = {2},
+  journal = {Trends in Cognitive Sciences},
+  author = {Poldrack, R},
+  month = feb,
+  year = {2006},
+  pages = {59-63},
+  file = {/Users/davidjohnbaker/Zotero/storage/T9H6HFI8/Poldrack - 2006 - Can cognitive processes be inferred from neuroimag.pdf}
+}
+
+@incollection{schulzeAuditoryWorkingMemory2018,
+  address = {Berlin, Heidelberg},
+  title = {Auditory {{Working Memory}}},
+  isbn = {978-3-662-55002-1 978-3-662-55004-5},
+  language = {en},
+  booktitle = {Springer {{Handbook}} of {{Systematic Musicology}}},
+  publisher = {{Springer Berlin Heidelberg}},
+  author = {Schulze, Katrin and Koelsch, Stefan and Williamson, Victoria},
+  editor = {Bader, Rolf},
+  year = {2018},
+  pages = {461-472},
+  file = {/Users/davidjohnbaker/Zotero/storage/KK5CT2KT/Schulze et al. - 2018 - Auditory Working Memory.pdf},
+  doi = {10.1007/978-3-662-55004-5_24}
+}
+
+@article{schulzeWorkingMemorySpeech2012a,
+  title = {Working Memory for Speech and Music: {{Schulze}} \& {{Koelsch}}},
+  volume = {1252},
+  issn = {00778923},
+  shorttitle = {Working Memory for Speech and Music},
+  doi = {10.1111/j.1749-6632.2012.06447.x},
+  language = {en},
+  number = {1},
+  journal = {Annals of the New York Academy of Sciences},
+  author = {Schulze, Katrin and Koelsch, Stefan},
+  month = apr,
+  year = {2012},
+  pages = {229-236},
+  file = {/Users/davidjohnbaker/Zotero/storage/Y9QZXYAI/Schulze and Koelsch - 2012 - Working memory for speech and music Schulze & Koe.pdf}
+}
+
+@article{kraehenbuehlInformationMeasureExperience1959,
+  title = {Information as a {{Measure}} of the {{Experience}} of {{Music}}},
+  volume = {17},
+  issn = {00218529},
+  doi = {10.2307/428224},
+  language = {en},
+  number = {4},
+  journal = {The Journal of Aesthetics and Art Criticism},
+  author = {Kraehenbuehl, David and Coons, Edgar},
+  month = jun,
+  year = {1959},
+  pages = {510},
+  file = {/Users/davidjohnbaker/Zotero/storage/CI4ZESD2/Kraehenbuehl and Coons - 1959 - Information as a Measure of the Experience of Musi.pdf}
+}
+
+@article{coonsInformationMeasureStructure1958,
+  title = {Information as a {{Measure}} of {{Structure}} in {{Music}}},
+  volume = {2},
+  issn = {00222909},
+  doi = {10.2307/843197},
+  language = {en},
+  number = {2},
+  journal = {Journal of Music Theory},
+  author = {Coons, Edgar and Kraehenbuehl, David},
+  month = nov,
+  year = {1958},
+  pages = {127},
+  file = {/Users/davidjohnbaker/Zotero/storage/P9C757N2/Coons and Kraehenbuehl - 1958 - Information as a Measure of Structure in Music.pdf}
+}
+
+@article{hillerStructureInformationWebern21,
+  title = {Structure and {{Information}} in {{Webern}}'s {{Symphonie}}, {{Op}}. 21},
+  volume = {11},
+  issn = {00222909},
+  doi = {10.2307/842949},
+  language = {en},
+  number = {1},
+  journal = {Journal of Music Theory},
+  author = {Hiller, Lejaren and Fuller, Ramon},
+  year = {21},
+  pages = {60},
+  file = {/Users/davidjohnbaker/Zotero/storage/3TBURTAV/Hiller and Fuller - 1967 - Structure and Information in Webern's Symphonie, O.pdf}
+}
+
+@article{hillerInformationTheoryAnalyses21,
+  title = {Information {{Theory Analyses}} of {{Four Sonata Expositions}}},
+  volume = {10},
+  issn = {00222909},
+  doi = {10.2307/843300},
+  language = {en},
+  number = {1},
+  journal = {Journal of Music Theory},
+  author = {Hiller, Lejaren and Bean, Calvert},
+  year = {21},
+  pages = {96},
+  file = {/Users/davidjohnbaker/Zotero/storage/N5MPERRB/Hiller and Bean - 1966 - Information Theory Analyses of Four Sonata Exposit.pdf}
+}
+
+@article{conklinMultipleViewpointSystems1995,
+  title = {Multiple Viewpoint Systems for Music Prediction},
+  volume = {24},
+  issn = {0929-8215, 1744-5027},
+  doi = {10.1080/09298219508570672},
+  abstract = {This paper examines the prediction and generation of music using a multiple viewpoint system, a collection of independent views of the musical surface each of which models a specific type of musical phenomena. Both the general style and a particular piece are modeled using dual short-term and long-term theories, and the model is created using machine learning techniques on a corpus of musical examples.},
+  language = {en},
+  number = {1},
+  journal = {Journal of New Music Research},
+  author = {Conklin, Darrell and Witten, Ian H.},
+  month = mar,
+  year = {1995},
+  pages = {51-73},
+  file = {/Users/davidjohnbaker/Zotero/storage/3H4B74DX/Conklin and Witten - 1995 - Multiple viewpoint systems for music prediction.pdf}
+}
+
+@article{desainQuantizationMusicalTime23,
+  title = {The {{Quantization}} of {{Musical Time}}: {{A Connectionist Approach}}},
+  volume = {13},
+  issn = {01489267},
+  shorttitle = {The {{Quantization}} of {{Musical Time}}},
+  doi = {10.2307/3680012},
+  language = {en},
+  number = {3},
+  journal = {Computer Music Journal},
+  author = {Desain, Peter and Honing, Henkjan},
+  year = {23},
+  pages = {56},
+  file = {/Users/davidjohnbaker/Zotero/storage/2AW26Q64/Desain and Honing - 1989 - The Quantization of Musical Time A Connectionist .pdf}
+}
+
+@article{meyerMeaningMusicInformation1957,
+  title = {Meaning in {{Music}} and {{Information Theory}}},
+  volume = {15},
+  issn = {00218529},
+  doi = {10.2307/427154},
+  language = {en},
+  number = {4},
+  journal = {The Journal of Aesthetics and Art Criticism},
+  author = {Meyer, Leonard B.},
+  month = jun,
+  year = {1957},
+  pages = {412},
+  file = {/Users/davidjohnbaker/Zotero/storage/UH3BPI9B/Meyer - 1957 - Meaning in Music and Information Theory.pdf}
+}
+
+@article{millerInformationMemory1956,
+  title = {Information and {{Memory}}},
+  volume = {195},
+  issn = {0036-8733},
+  doi = {10.1038/scientificamerican0856-42},
+  language = {en},
+  number = {2},
+  journal = {Scientific American},
+  author = {Miller, George A.},
+  month = aug,
+  year = {1956},
+  pages = {42-46},
+  file = {/Users/davidjohnbaker/Zotero/storage/E4WC2C3G/Miller - 1956 - Information and Memory.pdf}
+}
+
+@article{minskyStepsArtificialIntelligence1961,
+  title = {Steps toward {{Artificial Intelligence}}},
+  volume = {49},
+  issn = {0096-8390},
+  doi = {10.1109/JRPROC.1961.287775},
+  abstract = {The problems of heuristic programming-of making computers solve really difficult problems-are divided into five main areas: Search, Pattern-Recognition, Learning, Planning, and Induction.},
+  language = {en},
+  number = {1},
+  journal = {Proceedings of the IRE},
+  author = {Minsky, Marvin},
+  month = jan,
+  year = {1961},
+  pages = {8-30},
+  file = {/Users/davidjohnbaker/Zotero/storage/9WH9N5XY/Minsky - 1961 - Steps toward Artificial Intelligence.pdf}
+}
+
+@article{newellLCGICTHUXYMCHINE,
+  title = {{{THE LCGIC THUXY MCHINE A COMPLEXINF}}'{{O}}\&{{ATICN PR}}.{{OCFSSINSGYSTEM}}},
+  abstract = {In this paper we describe a complex information processing system, which we call the logic theory machine, that is capable of discovering proofs for theorems in symbolic logic. This system, in contrast to the systematic algorithms that are ordinarily employed in computation, relies heavily on heuristic methods similar to those that have been observed in human problem solving activity. The specification is written in a. formal language, of the nature of a pseudo-code, that is suitable for coding for digital computers. However, the present paper is concerned ezlusively with specification of the system, and not with its realization in a computer. The,logic theory machine is part of a program of research to understand complex informztion processing systems by specifying and synthesizing a substaniial variety of such systems for empirical study.},
+  language = {en},
+  author = {Newell, Allen and Simonl, Herbert A},
+  pages = {19},
+  file = {/Users/davidjohnbaker/Zotero/storage/XANM3ARF/Newell and Simonl - THE LCGIC THUXY MCHINE A COMPLEXINF'O&ATICN PR.OCF.pdf}
+}
+
+@article{pinkertonInformationTheoryMelody1956,
+  title = {Information {{Theory}} and {{Melody}}},
+  volume = {194},
+  issn = {0036-8733},
+  doi = {10.1038/scientificamerican0256-77},
+  language = {en},
+  number = {2},
+  journal = {Scientific American},
+  author = {Pinkerton, Richard C.},
+  month = feb,
+  year = {1956},
+  pages = {77-87},
+  file = {/Users/davidjohnbaker/Zotero/storage/P3Z4XZFX/Pinkerton - 1956 - Information Theory and Melody.pdf}
+}
+
+@article{youngbloodStyleInformation1958,
+  title = {Style as {{Information}}},
+  volume = {2},
+  issn = {00222909},
+  doi = {10.2307/842928},
+  language = {en},
+  number = {1},
+  journal = {Journal of Music Theory},
+  author = {Youngblood, Joseph E.},
+  month = apr,
+  year = {1958},
+  pages = {24},
+  file = {/Users/davidjohnbaker/Zotero/storage/2IBMGKLZ/Youngblood - 1958 - Style as Information.pdf}
+}
+
+@article{salaDoesFarTransfer2017,
+  title = {Does {{Far Transfer Exist}}? {{Negative Evidence From Chess}}, {{Music}}, and {{Working Memory Training}}},
+  volume = {26},
+  issn = {0963-7214, 1467-8721},
+  shorttitle = {Does {{Far Transfer Exist}}?},
+  doi = {10.1177/0963721417712760},
+  abstract = {Chess masters and expert musicians appear to be, on average, more intelligent than the general population. Some researchers have thus claimed that playing chess or learning music enhances children's cognitive abilities and academic attainment. We here present two meta-analyses assessing the effect of chess and music instruction on children's cognitive and academic skills. A third meta-analysis evaluated the effects of working memory training\textemdash{}a cognitive skill correlated with music and chess expertise\textemdash{}on the same variables. The results show small to moderate effects. However, the effect sizes are inversely related to the quality of the experimental design (e.g., presence of active control groups). This pattern of results casts serious doubts on the effectiveness of chess, music, and working memory training. We discuss the theoretical and practical implications of these findings; extend the debate to other types of training such as spatial training, brain training, and video games; and conclude that far transfer of learning rarely occurs.},
+  language = {en},
+  number = {6},
+  journal = {Current Directions in Psychological Science},
+  author = {Sala, Giovanni and Gobet, Fernand},
+  month = dec,
+  year = {2017},
+  pages = {515-520},
+  file = {/Users/davidjohnbaker/Zotero/storage/YESCLPJ2/Sala and Gobet - 2017 - Does Far Transfer Exist Negative Evidence From Ch.pdf}
+}
+
+@article{anglada-tortFalseMemoriesMusic2018,
+  title = {False Memories in Music Listening: Exploring the Misinformation Effect and Individual Difference Factors in Auditory Memory},
+  issn = {0965-8211, 1464-0686},
+  shorttitle = {False Memories in Music Listening},
+  doi = {10.1080/09658211.2018.1545858},
+  abstract = {The study of false memory has had a profound impact on our understanding of how and what we remember, as shown by the misinformation paradigm [Loftus, E. F. (2005). Planting misinformation in the human mind: A 30-year investigation of the malleability of memory. Learning \& Memory, 12 (4), 361\textendash{}366. doi:10.1101/lm.94705]. Though misinformation effects have been demonstrated extensively within visual tasks, they have not yet been explored in the realm of non-visual auditory stimuli. Thus, the present study aimed to investigate whether post-event information can create false memories of music listening episodes. In addition, we explored individual difference factors potentially associated with false memory susceptibility in music, including age, suggestibility, personality, and musical training. In two music recognition tasks, participants (N = 151) listened to an initial music track, which unbeknownst to them was missing an instrument. They were then presented with post-event information which either suggested the presence of the missing instrument or did not. The presence of misinformation resulted in significantly poorer performance on the music recognition tasks (d = .43), suggesting the existence of false musical memories. A random forest analysis indicated that none of the individual difference factors assessed were significantly associated with misinformation susceptibility. These findings support previous research on the fallibility of human memory and demonstrate, to some extent, the generality of the misinformation effect to a non-visual auditory domain.},
+  language = {en},
+  journal = {Memory},
+  author = {{Anglada-Tort}, Manuel and Baker, Thomas and M\"ullensiefen, Daniel},
+  month = nov,
+  year = {2018},
+  pages = {1-16},
+  file = {/Users/davidjohnbaker/Zotero/storage/HA8VWH59/Anglada-Tort et al. - 2018 - False memories in music listening exploring the m.pdf}
+}
+
+@article{peretzWhatSpecificMusic2003,
+  title = {What Is Specific to Music Processing? {{Insights}} from Congenital Amusia},
+  volume = {7},
+  issn = {13646613},
+  shorttitle = {What Is Specific to Music Processing?},
+  doi = {10.1016/S1364-6613(03)00150-5},
+  language = {en},
+  number = {8},
+  journal = {Trends in Cognitive Sciences},
+  author = {Peretz, Isabelle and Hyde, Krista L.},
+  month = aug,
+  year = {2003},
+  pages = {362-367},
+  file = {/Users/davidjohnbaker/Zotero/storage/RZBFAWRM/Peretz and Hyde - 2003 - What is specific to music processing Insights fro.pdf}
+}
+
+@article{GoldsmithsMusicalSophistication,
+  title = {Goldsmiths {{Musical Sophistication Index}} ({{Gold}}-{{MSI}}): {{Portuguese}} Version and Associations with Socio-Demographic Factors, Personality and Music Preferences},
+  abstract = {The Goldsmiths Musical Sophistication Index (Gold-MSI) was recently proposed as a self-report measure of musical skills and behaviors in the general population. Although it is becoming a widely used tool, relatively little is known about its correlates, and adaptations into different languages will be crucial for cross-cultural comparisons and to allow for use beyond the original validation context. In this study, we adapted the Gold-MSI for use with Portuguese speaking individuals and evaluated it with a Portuguese sample (N = 408; age range = 17\textendash{}66 years; 306 women). We demonstrate that the Portuguese version of the Gold-MSI has appropriate psychometric properties, including good internal consistency and very good test\textendash{}retest reliability. This was observed for the five subscales and for the general musical sophistication index ($\alpha$ values $\geqslant$ 0.82, r values $\geqslant$ 0.84). Using confirmatory factor analysis, the expected underlying factor structure was also confirmed. In addition, we identified associations between individual differences on the Gold-MSI and socio-demographic factors (age, sex, education, socio-economic status), personality traits, and music preferences. The Portuguese Gold-MSI is freely available, and it offers a reliable and valid tool that can contribute to the refined assessment of musical sophistication in a range of research contexts.},
+  language = {en},
+  journal = {Psychology of Music},
+  pages = {13},
+  file = {/Users/davidjohnbaker/Zotero/storage/DMLWM3PV/Goldsmiths Musical Sophistication Index (Gold-MSI).pdf}
+}
+
+@article{peretzNeuralOverlapProcessing2015,
+  title = {Neural Overlap in Processing Music and Speech},
+  volume = {370},
+  issn = {0962-8436, 1471-2970},
+  doi = {10.1098/rstb.2014.0090},
+  language = {en},
+  number = {1664},
+  journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+  author = {Peretz, I. and Vuvan, D. and Lagrois, M.-E. and Armony, J. L.},
+  month = feb,
+  year = {2015},
+  pages = {20140090-20140090},
+  file = {/Users/davidjohnbaker/Zotero/storage/UAZ7USW2/Peretz et al. - 2015 - Neural overlap in processing music and speech.pdf}
+}
+
+@article{ExaminingMusicalSophistication,
+  title = {Examining Musical Sophistication: {{A}} Replication and Theoretical Commentary on the {{Goldsmiths Musical Sophistication Index}}},
+  abstract = {The difficulties associated with measuring the complex construct of musicianship have received considerable attention in the music psychology literature. Multiple measures exist for various constructs, yet the need for the careful replication and documentation of the use of these measures remains an area of critical importance. Here, we describe the replication of the Goldsmiths Musical Sophistication Index (Gold-MSI) in a sample of 346 university students, drawn from both a school of music and a department of psychology. The original approach to modeling the Gold-MSI was followed as closely as possible, and the results replicated well overall. Issues were noted, however, with the characteristics of the sample, the skew of some of the individual items, and the overall use of the bifactor structure. These findings are discussed in relation to the state of measuring musicianship in the current literature, as well as in relation to the larger theoretical concerns surrounding the modeling of complex psychological and musical constructs.},
+  language = {en},
+  journal = {Musicae Scientiae},
+  pages = {19},
+  file = {/Users/davidjohnbaker/Zotero/storage/APTEETXU/Examining musical sophistication A replication an.pdf}
+}
+
+@article{thiessenWhatStatisticalLearning2017,
+  title = {What's Statistical about Learning? {{Insights}} from Modelling Statistical Learning as a Set of Memory Processes},
+  volume = {372},
+  issn = {0962-8436, 1471-2970},
+  shorttitle = {What's Statistical about Learning?},
+  doi = {10.1098/rstb.2016.0056},
+  language = {en},
+  number = {1711},
+  journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+  author = {Thiessen, Erik D.},
+  month = jan,
+  year = {2017},
+  pages = {20160056},
+  file = {/Users/davidjohnbaker/Zotero/storage/SYJH6JVY/Thiessen - 2017 - What's statistical about learning Insights from m.pdf}
+}
+
+@article{unykInfluenceExpectancyMelodic1987,
+  title = {The Influence of Expectancy on Melodic Perception.},
+  volume = {7},
+  issn = {2162-1535, 0275-3987},
+  doi = {10.1037/h0094189},
+  language = {en},
+  number = {1},
+  journal = {Psychomusicology: A Journal of Research in Music Cognition},
+  author = {Unyk, Anna M. and Carlsen, James C.},
+  year = {1987},
+  pages = {3-23},
+  file = {/Users/davidjohnbaker/Zotero/storage/5GGQSBYI/Unyk and Carlsen - 1987 - The influence of expectancy on melodic perception..pdf}
+}
+
+@article{krofProcessMusickingAlternative,
+  title = {The {{Process}} of {{Musicking}}: {{An Alternative}} to {{Melodic Dictation}} and {{Other Activities Involved}} in the {{Undergraduate Music Program}}},
+  language = {en},
+  author = {Krof, Tanya},
+  pages = {56},
+  file = {/Users/davidjohnbaker/Zotero/storage/LSUJNBM7/Krof - The Process of Musicking An Alternative to Melodi.pdf}
+}
+
+@article{pfordresherCostMusicalTraining2018,
+  title = {A Cost of Musical Training? {{Sensorimotor}} Flexibility in Musical Sequence Learning},
+  issn = {1069-9384, 1531-5320},
+  shorttitle = {A Cost of Musical Training?},
+  doi = {10.3758/s13423-018-1535-5},
+  abstract = {We report an experiment that tested the flexibility of sensorimotor learning in sequence production. Nonpianists and pianists learned simple melodies by ear under one of two auditory feedback conditions: one with normal pitch mapping (higher pitches to the right) and one with an inverted (reversed) mapping. After learning, both groups played melodies from memory while experiencing each feedback condition. Both groups exhibited sensorimotor learning and produced fewer errors at test while hearing the feedback used during training as opposed to the alternate feedback condition. However, learning was unstable for pianists who learned melodies with an inverted feedback condition, who produced more errors at test than pianists who learned melodies with normal-pitch mapping. Acquiring musical skill may therefore constrain subsequent sensorimotor flexibility.},
+  language = {en},
+  journal = {Psychonomic Bulletin \& Review},
+  author = {Pfordresher, Peter Q. and Chow, Karen},
+  month = oct,
+  year = {2018},
+  file = {/Users/davidjohnbaker/Zotero/storage/ILWXFSVI/Pfordresher and Chow - 2018 - A cost of musical training Sensorimotor flexibili.pdf}
+}
+
+@article{wigginsFrameworkEvaluationMusic23,
+  title = {A {{Framework}} for the {{Evaluation}} of {{Music Representation Systems}}},
+  volume = {17},
+  issn = {01489267},
+  doi = {10.2307/3680941},
+  language = {en},
+  number = {3},
+  journal = {Computer Music Journal},
+  author = {Wiggins, Geraint and Miranda, Eduardo and Smaill, Alan and Harris, Mitch},
+  year = {23},
+  pages = {31},
+  file = {/Users/davidjohnbaker/Zotero/storage/DUQ4TYRH/Wiggins et al. - 1993 - A Framework for the Evaluation of Music Representa.pdf}
+}
+
+@article{londonBuildingRepresentativeCorpus2013,
+  title = {Building a {{Representative Corpus}} of {{Classical Music}}},
+  volume = {31},
+  issn = {07307829, 15338312},
+  doi = {10.1525/mp.2013.31.1.68},
+  language = {en},
+  number = {1},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {London, Justin},
+  month = sep,
+  year = {2013},
+  pages = {68-90},
+  file = {/Users/davidjohnbaker/Zotero/storage/IT794FAX/London - 2013 - Building a Representative Corpus of Classical Musi.pdf}
+}
+
+@article{okadaIndividualDifferencesMusical2018a,
+  title = {Individual Differences in Musical Training and Executive Functions: {{A}} Latent Variable Approach},
+  volume = {46},
+  issn = {0090-502X, 1532-5946},
+  shorttitle = {Individual Differences in Musical Training and Executive Functions},
+  doi = {10.3758/s13421-018-0822-8},
+  abstract = {Learning and performing music draw on a host of cognitive abilities, and previous research has postulated that musicians might have advantages in related cognitive processes. One such aspect of cognition that may be related to musical training is executive functions (EFs), a set of top-down processes that regulate behavior and cognition according to task demands. Previous studies investigating the link between musical training and EFs have yielded mixed results and are difficult to compare. In part, this is because most studies have looked at only one specific cognitive process, and even studies looking at the same process have used different experimental tasks. Furthermore, most correlational studies have used different Bmusician\^ and Bnon-musician\^ categorizations for their comparisons, so generalizing the findings is difficult. The present study provides a more comprehensive assessment of how individual differences in musical training relate to latent measures of three separable aspects of EFs. We administered a wellvalidated EF battery containing multiple tasks tapping the EF components of inhibition, shifting, and working memory updating (Friedman et al. in Journal of Experimental Psychology: General, 137, 201\textendash{}225, 2008), as well as a comprehensive, continuous measure of musical training and sophistication (M\"ullensiefen et al., in PLoS ONE, 9, e89642, 2014). Musical training correlated with some individual EF tasks involving inhibition and working memory updating, but not with individual tasks involving shifting. However, musical training only predicted the latent variable of working memory updating, but not the latent variables of inhibition or shifting after controlling for IQ, socioeconomic status, and handedness. Although these data are correlational, they nonetheless suggest that musical experience places particularly strong demands specifically on working memory updating processes.},
+  language = {en},
+  number = {7},
+  journal = {Memory \& Cognition},
+  author = {Okada, Brooke M. and Slevc, L. Robert},
+  month = oct,
+  year = {2018},
+  pages = {1076-1092},
+  file = {/Users/davidjohnbaker/Zotero/storage/CAU5WPMM/Okada and Slevc - 2018 - Individual differences in musical training and exe.pdf}
+}
+
+
+@Article{okadaIndividualDifferencesMusical2018,
+  langid = {english},
+  title = {Individual Differences in Musical Training and Executive Functions: {{A}} Latent Variable Approach},
+  issn = {0090-502X, 1532-5946},
+  url = {http://link.springer.com/10.3758/s13421-018-0822-8},
+  doi = {10.3758/s13421-018-0822-8},
+  shorttitle = {Individual Differences in Musical Training and Executive Functions},
+  abstract = {Learning and performing music draw on a host of cognitive abilities, and previous research has postulated that musicians might have advantages in related cognitive processes. One such aspect of cognition that may be related to musical training is executive functions (EFs), a set of top-down processes that regulate behavior and cognition according to task demands. Previous studies investigating the link between musical training and EFs have yielded mixed results and are difficult to compare. In part, this is because most studies have looked at only one specific cognitive process, and even studies looking at the same process have used different experimental tasks. Furthermore, most correlational studies have used different Bmusician\^ and Bnon-musician\^ categorizations for their comparisons, so generalizing the findings is difficult. The present study provides a more comprehensive assessment of how individual differences in musical training relate to latent measures of three separable aspects of EFs. We administered a wellvalidated EF battery containing multiple tasks tapping the EF components of inhibition, shifting, and working memory updating (Friedman et al. in Journal of Experimental Psychology: General, 137, 201–225, 2008), as well as a comprehensive, continuous measure of musical training and sophistication (Müllensiefen et al., in PLoS ONE, 9, e89642, 2014). Musical training correlated with some individual EF tasks involving inhibition and working memory updating, but not with individual tasks involving shifting. However, musical training only predicted the latent variable of working memory updating, but not the latent variables of inhibition or shifting after controlling for IQ, socioeconomic status, and handedness. Although these data are correlational, they nonetheless suggest that musical experience places particularly strong demands specifically on working memory updating processes.},
+  journaltitle = {Memory \& Cognition},
   urldate = {2018-10-16},
-  date = {2018-07},
-  pages = {378-395},
-  author = {Marcus T. Pearce},
-  file = {/Users/davidjohnbaker/Zotero/storage/7QYDSRI2/Pearce - 2018 - Statistical learning and probabilistic prediction .pdf},
+  date = {2018-05-11},
+  author = {Brooke M. Okada and L. Robert Slevc},
+  file = {/Users/davidjohnbaker/Zotero/storage/D7HNXAJG/Okada and Slevc - 2018 - Individual differences in musical training and exe.pdf},
 }
