--- a/document/02-individual-parameters.Rmd
+++ b/document/02-individual-parameters.Rmd
@@ -1,8 +1,210 @@
----
-output:
-  word_document: default
-  html_document: default
----
+## Individual Differences
+
+Needs to be related to melodic dictation.
+Given the universe of possible musical activites, one of the one that tends to come up in perceptual.
+
+I. establish musical memory is key component in melodic dictation
+- karpinski model 
+- how it works
+- note that this is just act of hearing it
+- not super specific (is it rehearsed, active, baddely vs cowan)
+- logic here is presumed that as people get better at MD then able to do more
+- quote from karinski to support that
+- ALso there is anecdotal evidence to support that bc people get better at MD
+- could be that people are getting better musical memory
+- but also that they could be getting better at chunking
+- IMPORTANTLY this rests on premise that ability in increasing due to training effects
+- But what is the baseline?
+- And what is the direction of causality 
+- And aside from training, are there other cognitive abilities that contribe to this?
+
+II. Berz and WM 
+- THis point is made by Berz who addressed the issue and noted that he thought WMC 
+- Berz notes that althoguht many musical aptitude tests purport to measure aptitude could be WM.
+- Could it be that these are reflecting differences in cognitive ability?
+
+This chapter seeks to understand how much baseline cognitive play into these kinds of ideas
+
+
+In order for an individual to be able to complete a melodic dictation, they must be able to remember the melody that they are trying to dictate.
+Using the Karpinski model, this would be the in the first two steps.
+
+How does this relate to melodic dictation
+Need to be able to hear a melody (step 2 of Karpinski)
+Presumed that musical training leads to this increase in melody (talamini)
+Where the idea is that as you get better with music, can chunk more efficently.
+Even langauge to suggest that people are improving their melodic memory.
+This is still under assumption that musical training leads to increaes in musical abiliyt
+
+of course not going to doubt that training works, but need to question the assumptions of this. 
+
+
+But according to GS and OS, could be that the causality is the other way around.
+If this is the case, instead of measuring muscial memory, could just have overly domain specific measures of a general congitive function. 
+
+A large amount of music psychology tests require some sort of musical memory.
+Tasks range from same different to new old paradigms.
+Idea is that you can predcit some of them with other things.
+
+As pointed out by Berz (1995), 
+
+
+## Literature Review
+
+### Hook
+
+Academic interest in the relationship between musical and cognitive ability dates back over a century.
+In 1904, Charles Spearman [@spearmanGeneralIntelligenceObjectively1904] reported that Carl Seashore's pitch discrimination test (Seashore) correlated with his conception of general intelligence (.70, p.276), yet used an extensive footnote to highlight that there were "many notable instances will easily be found where musical ability is apparently divorced from General Intelligence"(p 275) suggesting that the relationship between music and cognitive ability is perhaps more complex than he originally reports.
+He thought that it could be accounted for with......
+But accounting for the last 100 years of research in this area demonstrates that great progress actually has been made in attempting to understand the relationship between music and cognitive ability. 
+-- straight into polymorphism of ability
+
+
+### Music and Cognitive Ability 
+
+-- is this really just better to be about music and cognitive ability
+-- or should i just straight out of the gate say that trying to emasure musicianship is miguided
+-- really going to commit to the polymorphic view of musicianship
+-- straight out of the gate 
+
+
+
+
+The relationship between musical and cognitive ability is one the most active research topics in music psychology.
+Owing much of the interest to the since debunked (CITE) excitement of far transfer claims from the Mozart Effect (CITE), more recent literature concerning the relationship between musical and cognitive ability focuses on looking at cross sectional studies.
+- studies here. 
+
+Okada and Slevc (XXXX) summerize the current state of the literature noting that
+
+
+Overall main picture is that it could be one of three things.
+Supported by literature that says XYZ. 
+
+
+Though this is not just correlational evidence, in order to parse out causal there are rct.
+
+
+Evidence is mixed here.
+For example both GS and OS point out the lack of covariates.
+
+
+
+People tend to frame the important studying of the link between two as possible way to improve cognition, thus improve quality.
+Note here that this tethering is danger zone IMO bc first devalues music as cultural, second if connection goes based funding so do the arts. 
+
+
+- national attention via Mozart Effect
+- largely debunked
+- correlational studies 
+- given nature of studies 
+- but to largely summerize, it is bascially at point with OS where there are three different possibliites. 
+- 123
+- get around this problem with many types of RCTs
+- but many still do not take into account the many confounds in these types of tests
+- Need studies that account for these measures
+
+- Not only that, but field suffers from non-standard way to measure musicality
+- and question of what is your dependant varaible of what is being measured
+- relationshp exists, but depends how you conceptulize it.
+- One way to get aroudn musicality problem is Gold-MSI
+- points on gold msi 
+- gives us standard measure of musicality, ontological problem
+- also gives standard set of objective measrues
+- people establish that there is something here.
+- but one problem is that maybe that there more domain general processes accounting for this
+- one way that other people have looked at it os OS
+- They think about it as LV with three separate sets they define as xyz
+- thing is, this is very close to WM (what they call separate)
+
+- 
+
+
+Two appear to be related and need to disentangle that relationship.
+In general, appears they are linked and OS narrow it down to three posibilities. 
+GS also selecition bias.
+
+While many of the studies above establish that a relationship exists between current conceptualizations of musical abibility and cognitive ability, at play has yet to be agreed upon.
+@okadaIndividualDifferencesMusical2018 
+
+Problems with measurement! 
+
+Cognitive
+Established there is a relationship
+Tho depends how you do it
+One way of thinking about it via objective tests.
+Melodic memory tests are like this 
+And importantly like wmc
+allows for way to look at things without confound of transcription
+
+There is a lot of literature on it
+The big problem is teasing out the directionality.
+Okada and Slevc break it down with three possibility.
+GS notes that it really could be that its selection bias.
+
+Thing is that way OS set up EF, say it's three tasks.
+Note these three tasks are basically how Cowan operatinlizes WM.
+
+While they note there is literature that suggests each of these can be improved.
+For example, n-back task.
+And also note that most people won't do it.
+Whole point is that this is probably tapping into other resources
+Also does not give a complete picture of the full mechanism. 
+
+So having done it as compartmentalized thing, theory guide the battery.
+Now better to think about if model interfaces with world better when you conceptualize it as cowan WMC.
+Specific to this chapter, want to know how general cognitive functions and training interface with AS.
+Like OS, we too are interested in the Gold-MSI for reasons XYZ and taking LV approach.
+Unlike OS, interested in specifically looking at how operational def of established cognitive things fx AS.
+
+Plan to do this with first having proxy measure of AS.
+This is the objective part of the gold-msi.
+Has beat and melody.
+Since improved. 
+With the melodic task, you have to do this...
+... bc of that we assume that this is tapping into same resources used in AS.
+Like Berz said, basically WMC task.
+But the good thing about this is that it also avoids the expertise problem.
+Generally in the same camp, but note it is not a one-to-one mapping of the problem.
+
+In order to better understand what predicts this, I present a series of SEMs.
+Want to do some model building to see which set of measures best predicts WMC.
+First IV is the Gold-MSI.
+As noted it is robust tool for measuring musical sophisticaiton.
+It has been replicated, tranlsated.
+Also critiqued in that while helpful as LV, could have item level predictors to lifiting.
+
+But in addition to musical sophistcation, could be domain general features.
+In order to see if this is the case, need to investigate two important cognitive meaures.
+The first is general fluid intelligence second is WMC.
+
+Gf intelligence is ability to solve problems in novel situations.
+Comes from contrast of Gc.
+Generally solved with matrix reasoning tests.
+And also bears statistical and theoretical simlarity to _g_.
+Rationale was that since g is very predictive of many things (LIST) could be predictive here.
+Doing GMSI melodic is a sort of problem solving.
+
+WMC on other hand is defined as COWAN.
+If conceptulaized like this, as compositie of WMC where you have to do all three of OS.
+Then idea is that best measured with a complex span tasks.
+This stands in contrast to much of the other WMC and music stuff (Koelsch).
+Works within the baddely model of WMC which is this.
+But thing is you can't always get exact material with loop
+So Berz suggested a musical loop.
+And literature has even been interpreted in that framework such as
+Choose not to work within this framework bc how do you decide what gets loops.
+Unlike much of other music psychology work that uses simple span
+We use complex becaues the measure needs to be in line with the theoretical operationalization. 
+
+Given a robust instrument for measuring musciality, and two well established cognive measrues as specifically defined, this study analysis seeks to investigate the degree to which these individual level variables are predictive of a task that is proxy to AS.
+
+If much of musical memory has to do with Training, GMSI related variables should be most predictive.
+If instead cognitive factors do play a role, should see that in path loadings.
+Things could additionally interact and could do more complicated analyses with music level.
+
+EVENTUALLY PUT ON THE IDYOM OF BERKOWITZ AND SEE IF THAT IS PREDICTIVE. 
+
+
 # Individual Differences
 
 Audience: Individuals familiar with cognitive science that would think music is good way to talk about cognitive abilites
@@ -10,12 +212,9 @@ Audience: Individuals familiar with cognitive science that would think music is 
 Eventually i will say that 
 * WMC is really governing a lot of this work and people need to control for this pre-existing difference
 * 
-
 ## Introduction
 
-Research investigating the relationship between musical and cognitive ability dates back to over a centry.
-In 1904, Charles Spearman [@spearmanGeneralIntelligenceObjectively1904] used tests of pitch perception as part of his initial battery of tests when first introducing his initial conceptions of general intelligence. 
-While musical ability is perhaps more affected by training than the other measures that were of interest to Spearman (i.e. language and mathematics), the relationship between musical and cognitive ability, and the factors that mediate their relationship still has yet to be fully understood.
+hile musical ability is perhaps more affected by training than the other measures that were of interest to Spearman (i.e. language and mathematics), the relationship between musical and cognitive ability, and the factors that mediate their relationship still has yet to be fully understood.
 
 * Current state suggests that in some cases, musicians tend to do better than non musical peers
 * Okada and Slevc see this as explained by three possible hypotheses
@@ -30,57 +229,6 @@ While this might be a nice side fiding, important to note that even if a causal 
 Really the interesting reason to look into this relationship is that music, unlike other stimuli, provides a unique insight into looking things like gf and wmc bc no semantic information
 For example, if what is more likley the third hypothesis is true and there are just pre-existing differences that do not change but are mabye amplified with music lessons, this would have serious implications for a lot of the findings in the music psychology literature. 
 
-
-
-### General intelligence and WMC 
-
-* Two biggest of interest are gf which is basically g which you can think of as IQ
-* Other is working memory capacity
-* WM is particularly relevant because design of a WMC study very much mirrors same different tasks used in music psych literature
-* THIS IS LIKE A NO BRAINER ON MELODIC DICTATION BUT WILL REMOVE THIS SENTENCE
-* Here are some examples of that 
-* We are not the first to make this parallel, Berz did it in 1995 and said that we need to look into this more
-* His rationale was that he thinks there was a musical loop in the context of modular models of wmc ala baddely 
-* Not nessecarily the case since there are other theoretical frameworks to talk about music 
-* As stated above, looking at music provides a unique insight into contributing to discussions of wmc
-
-### Defining of terms
-
-* Having established this is a good problem, time to talk about what I think these terms mean
-* This is what gf is 
-* These are the people that have studied it and what they have found 
-* This is what wmc is as defined by Cowan 
-* Again, very clear parallels to wmc and if we can answer them w good evidence on large scale, good reason to think otherwise small
-* We see that in this.... literature
-* Could it be that there is a musical loop here ala Berz, Williamson, and would that explain Li Cowan Saults?
-
-* See, it's a great qustion to investigate 
-* Tho one big problem with music is that it's a lot harrier than other stimuli 
-* Every problem with chunking that Cowan 2005 talks about could be applied to music
-* Cant assume one note means one unit of memory and so on 
-* On top of that you have Pearce suggestion that things are encoded differently 
-* Also have problems of corpus distributions similar to words, good evidence for SLR and PPH 
-
-* regardless of this hariness, need to get further into it
-* Okada and slevec show that EF is also really important to make picture clearer
-* tho if you really want to to do working memory capacity, need to do complex span
-* the reason for this is xyz, can continue on from there
-* Again, WMC is underlying a lot of music stuff, we should see it on large scale 
-
-* Start setting up hypotheses 
-* What best predicts someone's ability to do well on a musical memory test? 
-* Not going to go straight to melodic dictation, first look into Berz 
-* If it really is musical training, we should be able to see that using measures of musical survey
-* If it's actually some sort of cognitive process, then that should have more predictive ability 
-* We can figure this out by fitting a series of models to the data and seeing which matches up best and it's measurements
-* Great ensemble of tests is the Gold-MSI bc it has self report and objective, and people have replicated it 
-* Specifically there are two objective tests
-* Describe them here
-* not exactly mmd, but similr skill set 
-* IF we accept these DVs, THEN we should be able to predict them with self reports and measures of WMC and gf
-* Do this with hierarchical LVM ala Elliott paper 
-
-* List hypotheses and predictions
 
 ## Overview of Experiment (cross sectional design)
 
